examples/test/testpolicy8096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8096
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key1: value25
      key0: value6
      key23: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value34
          key45: value43
          key29: value47
      podSelector:
        matchLabels:
          key9: value0
          key42: value20
